--- a/appsIndesejados.json
+++ b/appsIndesejados.json
@@ -30,6 +30,6 @@
  "nigga", "white", "m46asp", "UD", "CFF Explorer", "ollydbg", "ida", "idag", "idaw", "idaq", "idau",
  "scylla", "protection_id", "windbg", "reshacker", "ImportREC", "IMMUNITYDEBUGGER", "MegaDumper", "dotPeek32",
  "dnSpy.Console", "ILSpy", "Beamer x64 [Elevated]", "Beamer", "Frida", "Radare2", "Ghidra","Immunity Debugger", "Burp Suite",
- "Wireshark", "Anydesk", "Fiddler", "Xposed Framework", "ScyllaHide", "ProcessHacker", "ProcessHacker2", "Process Hacker",
+ "Wireshark", "Fiddler", "Xposed Framework", "ScyllaHide", "ProcessHacker", "ProcessHacker2", "Process Hacker",
     ]
 }
